Changed Gender.BOTH to Gender.OTHER

--- a/config/templates/default/de/forms/EditUserProfileForm.html
+++ b/config/templates/default/de/forms/EditUserProfileForm.html
@@ -15,7 +15,7 @@
 				<select name="gender">
 					<option value="male" {$maleGenderSelected}>männlich</option>
 					<option value="female" {$femaleGenderSelected}>weiblich</option>
-					<option value="both" {$bothGenderSelected}>beides</option>
+					<option value="other" {$otherGenderSelected}>anders</option>
 				</select>
 			</td>
 		</tr>
