--- a/config/templates/default/en/forms/EditUserProfileForm.html
+++ b/config/templates/default/en/forms/EditUserProfileForm.html
@@ -15,7 +15,7 @@
 				<select name="gender">
 					<option value="male" {$maleGenderSelected}>male</option>
 					<option value="female" {$femaleGenderSelected}>female</option>
-					<option value="both" {$bothGenderSelected}>both</option>
+					<option value="other" {$otherGenderSelected}>other</option>
 				</select>
 			</td>
 		</tr>
