--- a/config/templates/default/de/forms/AdminUserProfileForm.html
+++ b/config/templates/default/de/forms/AdminUserProfileForm.html
@@ -34,7 +34,7 @@
 				<select name="gender">
 					<option value="male" {$maleGenderSelected}>männlich</option>
 					<option value="female" {$femaleGenderSelected}>weiblich</option>
-					<option value="both" {$bothGenderSelected}>beides</option>
+					<option value="other" {$otherGenderSelected}>anders</option>
 				</select>
 			</td>
 			<td class="inline" align="right">Sprache:&nbsp;</td>
