--- a/config/templates/default/en/forms/AdminUserProfileForm.html
+++ b/config/templates/default/en/forms/AdminUserProfileForm.html
@@ -34,7 +34,7 @@
 				<select name="gender">
 					<option value="male" {$maleGenderSelected}>male</option>
 					<option value="female" {$femaleGenderSelected}>female</option>
-					<option value="both" {$bothGenderSelected}>both</option>
+					<option value="other" {$otherGenderSelected}>other</option>
 				</select>
 			</td>
 			<td class="inline" align="right">Language:&nbsp;</td>
