Fixed favicon.ico request bug with a hack; need to revisit later.

--- a/config/templates/default/de/infos/DoneInfo.html
+++ b/config/templates/default/de/infos/DoneInfo.html
@@ -11,7 +11,7 @@
 
 <p>
 	Und vergessen Sie bitte nicht, <a href="tell.html">Ihren Freunden von diesem Webplatz zu erzählen</a>!
-	Wir liiieben Feedback, also sagen Sie uns bitte <a href="http://blog.{$domainName}">Ihre Meinung auf unserem Blog</a>.
+	Wir lieben Feedback, also sagen Sie uns bitte <a href="http://blog.{$domainName}">Ihre Meinung auf unserem Blog</a>.
 </p>
 
 <b><a href="filter">Bitte schauen Sie sich weiter Fotos an!</a></b>
