--- a/config/templates/default/en/infos/DoneInfo.html
+++ b/config/templates/default/en/infos/DoneInfo.html
@@ -7,7 +7,7 @@
 
 <p>
 	Please don't forget to <a href="tell.html">tell your friends</a> about this website!
-	And we looove feedback, so please <a href="http://blog.{$domainName}">comment on our blog</a>.
+	And we love feedback, so please <a href="http://blog.{$domainName}">comment on our blog</a>.
 </p>
 
 <b><a href="filter">Please continue viewing photos!</a></b>
