--- a/web/config/templates/default/de/infos/LinksInfo.html
+++ b/web/config/templates/default/de/infos/LinksInfo.html
@@ -1,4 +1,4 @@
 <h3 class="inline">Gemeinde</h3>
 
-<p><a href="http://www.wahlzeit.org">Es ist Wahlzeit!</a></p>
+<p><a href="http://www.wahlzeit.org">Dies ist das Open-Source-Projekt Wahlzeit!</a></p>
 
