Added static resource access by way of Catalina's DefaultServlet. This (almost? to be shown) concludes the Tomcat migration.

--- a/web/config/templates/default/de/forms/SetOptionsForm.html
+++ b/web/config/templates/default/de/forms/SetOptionsForm.html
@@ -20,7 +20,7 @@
 					<option value="extra-small" {$extraSmallPhotoSizeSelected}>extra-klein</option>
 					<option value="small" {$smallPhotoSizeSelected}>klein</option>
 					<option value="medium" {$mediumPhotoSizeSelected}>mittel</option>
-					<option value="large" {$largePhotoSizeSelected}>groß;</option>
+					<option value="large" {$largePhotoSizeSelected}>groß</option>
 					<option value="extra-large" {$extraLargePhotoSizeSelected}>extra-groß</option>
 				</select>
 			</td>
