--- a/web/config/templates/default/de/forms/UploadPhotoForm.html
+++ b/web/config/templates/default/de/forms/UploadPhotoForm.html
@@ -6,7 +6,7 @@
 	<table class="border"><tr><td class="spacer"><table class="form">
 		<tr>
 			<td class="twoCol1">Dateiname:&nbsp;</td>
-			<td class="twoCol2"><input type="file" name="fileName" value="" size="32" /></td>
+			<td class="twoCol2"><input type="file" name="file" value="" size="32" /></td>
 		</tr>
 		<tr>
 			<td class="twoCol1">Foto-Tags:&nbsp;</td>
