Fixed HTML mistakes; adjusted to dirkriehle-wahlzeit.

--- a/src/main/webapp/config/templates/default/de/pages/ShowAdminPage.html
+++ b/src/main/webapp/config/templates/default/de/pages/ShowAdminPage.html
@@ -24,7 +24,7 @@
 							<b>Benutzer:</b>&nbsp;
 							<input type="text" size="12" name="userId" value="{$userId}" />
 							<input type="submit" name="adminUser" value="Editieren!" />
-							&nbsp;&#8213&nbsp;
+							&nbsp;&#8213;&nbsp;
 							<b>Foto:</b>&nbsp;
 							<input type="text" size="12" name="photoId" value="{$photoId}" />
 							<input type="submit" name="adminPhoto" value="Editieren!" />
