--- a/src/main/webapp/config/templates/default/en/pages/ShowAdminPage.html
+++ b/src/main/webapp/config/templates/default/en/pages/ShowAdminPage.html
@@ -24,7 +24,7 @@
 							<b>User:</b>&nbsp;
 							<input type="text" size="12" name="userId" value="{$userId}" />
 							<input type="submit" name="adminUser" value="Edit!" />
-							&nbsp;&#8213&nbsp;
+							&nbsp;&#8213;&nbsp;
 							<b>Photo:</b>&nbsp;
 							<input type="text" size="12" name="photoId" value="{$photoId}" />
 							<input type="submit" name="adminPhoto" value="Edit!" />
