Fixed missing semicolon in HTML files.

--- a/src/main/webapp/config/templates/default/de/forms/ShowUserProfileForm.html
+++ b/src/main/webapp/config/templates/default/de/forms/ShowUserProfileForm.html
@@ -11,7 +11,7 @@
 		<tr>
 			<td class="fiveCol2">Geschlecht:&nbsp;</td>
 			<td class="fiveCol3"><b>{$gender}</b></td>
-			<td class="fiveCol4">Kontostatus:&nbsp</td>
+			<td class="fiveCol4">Kontostatus:&nbsp;</td>
 			<td class="fiveCol5"><b>{$status}</b></td>
 		</tr>
 		<tr>
