--- a/src/main/webapp/config/templates/default/en/forms/ShowUserProfileForm.html
+++ b/src/main/webapp/config/templates/default/en/forms/ShowUserProfileForm.html
@@ -11,7 +11,7 @@
 		<tr>
 			<td class="fiveCol2">Gender:&nbsp;</td>
 			<td class="fiveCol3"><b>{$gender}</b></td>
-			<td class="fiveCol4">Account status:&nbsp</td>
+			<td class="fiveCol4">Account status:&nbsp;</td>
 			<td class="fiveCol5"><b>{$status}</b></td>
 		</tr>
 		<tr>
